--- a/MCM2021 LaTeX paper/masterbib.bib
+++ b/MCM2021 LaTeX paper/masterbib.bib
@@ -670,6 +670,27 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 	publisher={The Smithsonian Institution}, author={Paton, Steve}, year={2019}, month={Oct}
 } 
 
+@inproceedings{Andren1999,
+	title={Biodiversity and soil functioningÐfrom black box to can of worms ?},
+	author={O. Andre{\^A}na and J. Balandreaub},
+	year={1999}
+}
+
+@article{Moore2015,
+	author = {Moore, J. A. M. and Jiang, J. and Post, W. M. and Classen, A. T.},
+	title = {Decomposition by ectomycorrhizal fungi alters soil carbon storage in a simulation model},
+	journal = {Ecosphere},
+	volume = {6},
+	number = {3},
+	pages = {art29},
+	keywords = {carbon cycle, decomposition, ectomycorrhizae, extracellular enzyme activity, plant-soil interactions, simulation model, soil carbon sequestration},
+	doi = {https://doi.org/10.1890/ES14-00301.1},
+	url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/ES14-00301.1},
+	eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/ES14-00301.1},
+	abstract = {Carbon cycle models often lack explicit belowground organism activity, yet belowground organisms regulate carbon storage and release in soil. Ectomycorrhizal fungi are important players in the carbon cycle because they are a conduit into soil for carbon assimilated by the plant. It is hypothesized that ectomycorrhizal fungi can also be active decomposers when plant carbon allocation to fungi is low. Here, we reviewed the literature on ectomycorrhizal decomposition and we developed a simulation model of the plant-mycorrhizae interaction where a reduction in plant productivity stimulates ectomycorrhizal fungi to decompose soil organic matter. Our review highlights evidence demonstrating the potential for ectomycorrhizal fungi to decompose soil organic matter. Our model output suggests that ectomycorrhizal activity accounts for a portion of carbon decomposed in soil, but this portion varied with plant productivity and the mycorrhizal carbon uptake strategy simulated. Lower organic matter inputs to soil were largely responsible for reduced soil carbon storage. Using mathematical theory, we demonstrated that biotic interactions affect predictions of ecosystem functions. Specifically, we developed a simple function to model the mycorrhizal switch in function from plant symbiont to decomposer. We show that including mycorrhizal fungi with the flexibility of mutualistic and saprotrophic lifestyles alters predictions of ecosystem function.},
+	year = {2015}
+}
+
 @book{Holdridge1947,
 	title={Determination of world plant formations from simple climatic data},
 	author={Holdridge, LR.},
